# gpt2-image-captioning

./: .gitignore  .gitmodules  README.md  automation_config.yml  config.yml  download_coco_datasets.sh  main.py  pyproject.toml  requirements.txt  sweep.py  sweep_test.py  test.ipynb  tmp.ipynb  tmp.py  visualize_my_results.py
logs/: events.out.tfevents.1765344863.Rylee-Laptop.1916.0  events.out.tfevents.1765344984.Rylee-Laptop.18964.0
notebooks/: eval.ipynb  extract_clip_embeddings.ipynb  extract_dino_embeddings.ipynb  extract_vit_embeddings.ipynb  test.ipynb  testset_inference.ipynb  testtest.ipynb  train.ipynb  train_rat.ipynb  visualization.ipynb
sample_output/: results.json
src/: clip_embeddings.py  dataset.py  eval.py  models.py  preprocess_data.py  test.py  train.py  training_pipeline.py  utils.py  visualize.py
src/database/: config.py  entities.py  faiss_indexing.py  faiss_store.py  image_store.py  indexing.py  objectbox-model.json  objectbox_indexing.py  objectbox_store.py  store_adaptor.py
src/embeddings/: clip.py  dino.py  vit.py  word_embeddings.py
src/embeddings/dino/: dino.py
