[project]
name = "gpt2-image-captioning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "transformers>=4.57.3",
    "pycocoevalcap>=1.2",
    "fiftyone>=1.2.0",      # TODO: Fairly heavy, consider making it optional (separate dependency group)
]

[dependency-groups]
dev = ["ipykernel>=7.1.0", "ruff>=0.14.6"]
dinov3 = [
    "termcolor>=3.2.0",
    "torchmetrics>=1.8.2",
]

# Ruff (formatting and linting) configuration
[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# For PyTorch installation
[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
